# imou-compiler

./: .gitignore  CMakeLists.txt  README.md  compiler  grammar.bnf
examples/: test.asm  tree.json
examples/lang-files/: test.txt
src/: main.c
src/compiler/: compiler.c  compiler.h
src/parser/: lexer.c  lexer.h  parser.c  parser.h
tests/files/: test.txt
